fix(Sort) align right bug

--- a/src/components/CellMagicHeader/style.less
+++ b/src/components/CellMagicHeader/style.less
@@ -4,8 +4,10 @@
 
   a {
     cursor: pointer;
-    display: flex;
-    align-items: center;
+
+    span {
+      display: inline-block;
+    }
   }
 
   & > * {
