--- a/src/components/Sort/style.less
+++ b/src/components/Sort/style.less
@@ -1,7 +1,9 @@
 .react-redux-data-grid-sort {
   cursor: pointer;
-  display: flex;
-  align-items: center;
+
+  span {
+    display: inline-block;;
+  }
 
   &:hover {
     text-decoration: none;
