--- a/src/helper/components/SortCaret/style.less
+++ b/src/helper/components/SortCaret/style.less
@@ -4,6 +4,7 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid black;
+  margin-bottom: 3px;
 }
 
 .react-redux-data-grid-sort-caret-desc {
@@ -12,4 +13,5 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid black;
+  margin-bottom: 3px;
 }
